fixxed UI on mobile

--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ button {
     color: #fff;
     background: #333;
     outline: none;
-    padding: 0.5rem fit-content;
+    padding: 0.5rem 0.1rem;
     box-shadow: 0 0.3rem rgba(121,121,121,0.65);
     width: fit-content;
 }
